--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="title_home">Home</string>
     <string name="title_search">Search</string>
     <string name="title_movie">Movies</string>
+    <string name="title_profile">Profile</string>
 </resources>
